fix bug overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+/* passando ad un computer più piccolo mi sono reso conto di un bug: il mio html, la mia pagina per intera, presenta uno spazio bianco sottostante, che dal computer principale non è visibile, riesco a togliere questo spazio bianco dando all'html un overflow:hidden; ma non so da cosa dipenda
+CHIEDI AL MAIN TEACHER O A UN TUTOR */
+html{
+    overflow: hidden;
+}
+
 body {
     font-family: 'DM Sans', sans-serif;
 }
@@ -146,7 +152,7 @@ li {
     margin: 1rem 0;
     font-size: 0.9rem;
     line-height: 2;
-    height: 16rem;
+    height: 15rem;
     overflow: auto;
 }
 
